Prevent long header title going behind the corner.
(fix #41)

--- a/sources/stylesheets/components/_site-header.scss
+++ b/sources/stylesheets/components/_site-header.scss
@@ -32,7 +32,7 @@
     }
 
     .flexbox & {
-      @include flex(1 0 auto);
+      flex: 1 1 auto;
     }
 
     .no-flexbox & {
